<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.5</version>  <!-- Pinned to 3.3.x — stable LTS. Upgrade to 3.4+ after team review. -->
		<relativePath/>
	</parent>

	<groupId>com.cic</groupId>
	<artifactId>motor-quote-service</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>motor-quote-service</name>
	<description>CIC Motor Insurance Quote Service — Phase 3 (Security + Kafka + Redis)</description>

	<properties>
		<java.version>21</java.version>
		<jjwt.version>0.12.6</jjwt.version>          <!-- JJWT — JWT library -->
		<redisson.version>3.33.0</redisson.version>   <!-- Redisson — Redis distributed lock -->
	</properties>

	<dependencies>

		<!-- ── Web & Validation ──────────────────────────────────────────────── -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>

		<!-- ── Database: JPA + PostgreSQL ────────────────────────────────────── -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>

		<!-- ── PHASE 3.1: Spring Security ────────────────────────────────────── -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>

		<!-- ── PHASE 3.1: JWT (JJWT) ─────────────────────────────────────────── -->
		<!--
		  JJWT is the standard JWT library for Java Spring projects.
		  We use 3 artifacts: api (compile), impl + jackson (runtime only).
		  INTERN: Never use an older JJWT (< 0.11) — the API changed significantly.
		  The 0.12.x series uses the modern builder pattern shown in JwtService.java.
		-->
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-api</artifactId>
			<version>${jjwt.version}</version>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-impl</artifactId>
			<version>${jjwt.version}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-jackson</artifactId>
			<version>${jjwt.version}</version>
			<scope>runtime</scope>
		</dependency>

		<!-- ── PHASE 3.2: Apache Kafka ───────────────────────────────────────── -->
		<dependency>
			<groupId>org.springframework.kafka</groupId>
			<artifactId>spring-kafka</artifactId>
		</dependency>



		<!-- ── PHASE 3.3: Redis (Spring Data Redis + Redisson) ───────────────── -->
		<!--
		  spring-boot-starter-data-redis: Spring Cache integration (@Cacheable etc.)
		  redisson-spring-boot-starter: Redisson client for distributed locking (RLock).
		  The Redisson starter includes spring-data-redis, so both work together.
		  We use RedissonConnectionFactory to share one connection pool.
		-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-redis</artifactId>
		</dependency>
		<dependency>
			<groupId>org.redisson</groupId>
			<artifactId>redisson-spring-boot-starter</artifactId>
			<version>3.32.0</version>
		</dependency>

		<!-- ── WebClient (Reactor Netty) — used by DarajaService ────────────── -->
		<!--
		  spring-boot-starter-webflux brings in WebClient + Reactor Netty.
		  We are NOT switching to a reactive application — we keep Spring MVC.
		  WebClient can be used in a blocking mode (.block()) inside a traditional
		  Spring MVC/servlet app without any other changes. This is the recommended
		  approach for calling external HTTP APIs from a non-reactive service.
		-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webflux</artifactId>
		</dependency>

		<!-- ── Utilities ─────────────────────────────────────────────────────── -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>

		<!-- ── Testing ───────────────────────────────────────────────────────── -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.kafka</groupId>
			<artifactId>spring-kafka-test</artifactId>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<source>21</source>
					<target>21</target>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>1.18.32</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>